-- =========================================================
-- 01_schema.sql
-- UniDeportes - DDL base (13 tablas)
-- PostgreSQL 12+
-- =========================================================

SET client_encoding = 'UTF8';
SET timezone = 'UTC';

BEGIN;

-- Extensión requerida para constraint EXCLUDE con id_instalacion (=) + tstzrange (&&)
CREATE EXTENSION IF NOT EXISTS btree_gist;

-- -----------------------------
-- 1) Catálogo de roles
-- -----------------------------
CREATE TABLE IF NOT EXISTS roles (
    id SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo VARCHAR(30) NOT NULL UNIQUE,
    nombre VARCHAR(60) NOT NULL,
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- -----------------------------
-- 2) Usuarios
-- -----------------------------
CREATE TABLE IF NOT EXISTS usuarios (
    id BIGSERIAL PRIMARY KEY,
    id_rol SMALLINT NOT NULL REFERENCES roles(id) ON UPDATE RESTRICT ON DELETE RESTRICT,
    codigo_institucional VARCHAR(30) NOT NULL UNIQUE,
    nombre_usuario VARCHAR(80) NOT NULL,
    apellido_usuario VARCHAR(80) NOT NULL,
    correo_electronico VARCHAR(150) NOT NULL UNIQUE,
    hash_contrasena VARCHAR(255) NOT NULL,
    telefono VARCHAR(30),
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    ultimo_login_en TIMESTAMPTZ,
    eliminado_en TIMESTAMPTZ,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    actualizado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_usuarios_formato_correo CHECK (position('@' in correo_electronico) > 1)
);

-- -----------------------------
-- 3) Catálogo de deportes
-- -----------------------------
CREATE TABLE IF NOT EXISTS deportes (
    id SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo VARCHAR(40) NOT NULL UNIQUE,
    nombre VARCHAR(80) NOT NULL,
    etiqueta_campo VARCHAR(30) NOT NULL, -- Cancha / Pista / Campo
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- -----------------------------
-- 4) Catálogo de superficies
-- -----------------------------
CREATE TABLE IF NOT EXISTS tipos_superficie (
    id SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo VARCHAR(30) NOT NULL UNIQUE,
    nombre VARCHAR(60) NOT NULL,
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- -----------------------------
-- 5) Escenarios
-- -----------------------------
CREATE TABLE IF NOT EXISTS escenarios (
    id BIGSERIAL PRIMARY KEY,
    codigo VARCHAR(60) NOT NULL UNIQUE, -- ej: escenario-softball
    nombre VARCHAR(120) NOT NULL,
    id_tipo_superficie SMALLINT NOT NULL REFERENCES tipos_superficie(id) ON UPDATE RESTRICT ON DELETE RESTRICT,
    descripcion_ubicacion VARCHAR(255),
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    actualizado_en TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- -----------------------------
-- 6) Canchas/Pistas/Campos específicos
-- -----------------------------
CREATE TABLE IF NOT EXISTS instalaciones (
    id BIGSERIAL PRIMARY KEY,
    id_escenario BIGINT NOT NULL REFERENCES escenarios(id) ON UPDATE CASCADE ON DELETE RESTRICT,
    id_deporte SMALLINT NOT NULL REFERENCES deportes(id) ON UPDATE RESTRICT ON DELETE RESTRICT,
    codigo VARCHAR(80) NOT NULL UNIQUE,
    nombre VARCHAR(120) NOT NULL,
    capacidad SMALLINT,
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    actualizado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_instalaciones_capacidad_positiva CHECK (capacidad IS NULL OR capacidad > 0)
);

-- -----------------------------
-- 7) Franjas horarias (catálogo)
-- -----------------------------
CREATE TABLE IF NOT EXISTS franjas_horarias (
    id SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    hora_inicio TIME NOT NULL,
    hora_fin TIME NOT NULL,
    orden_clasificacion SMALLINT NOT NULL UNIQUE,
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_franjas_horarias_orden CHECK (hora_inicio < hora_fin)
);

-- -----------------------------
-- 8) Estados de reserva (catálogo)
-- -----------------------------
CREATE TABLE IF NOT EXISTS estados_reserva (
    id SMALLINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    codigo VARCHAR(30) NOT NULL UNIQUE,
    nombre VARCHAR(60) NOT NULL,
    es_final BOOLEAN NOT NULL DEFAULT FALSE,
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW()
);

-- -----------------------------
-- 9) Reservas (tabla principal)
-- Nota: El constraint de exclusión se agrega al final para evitar referencias circulares
-- -----------------------------
CREATE TABLE IF NOT EXISTS reservas (
    id BIGSERIAL PRIMARY KEY,
    id_usuario BIGINT NOT NULL REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE RESTRICT,
    id_instalacion BIGINT NOT NULL REFERENCES instalaciones(id) ON UPDATE CASCADE ON DELETE RESTRICT,
    id_estado SMALLINT NOT NULL REFERENCES estados_reserva(id) ON UPDATE RESTRICT ON DELETE RESTRICT,

    fecha_reserva DATE NOT NULL,

    id_franja_inicio SMALLINT NOT NULL REFERENCES franjas_horarias(id) ON UPDATE RESTRICT ON DELETE RESTRICT,
    id_franja_fin SMALLINT NOT NULL REFERENCES franjas_horarias(id) ON UPDATE RESTRICT ON DELETE RESTRICT,

    comienza_en TIMESTAMPTZ NOT NULL,
    termina_en TIMESTAMPTZ NOT NULL,
    duracion_horas SMALLINT NOT NULL,

    equipo_solicitado BOOLEAN NOT NULL DEFAULT FALSE,
    notas VARCHAR(500),
    razon_cancelacion VARCHAR(255),

    creado_por BIGINT REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE SET NULL,
    actualizado_por BIGINT REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE SET NULL,

    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    actualizado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),

    CONSTRAINT chk_reservas_orden_tiempo CHECK (comienza_en < termina_en),
    CONSTRAINT chk_reservas_duracion_horas CHECK (duracion_horas BETWEEN 1 AND 3),
    CONSTRAINT chk_reservas_orden_franjas CHECK (id_franja_inicio < id_franja_fin),
    CONSTRAINT chk_reservas_mismo_dia CHECK ((comienza_en AT TIME ZONE 'UTC')::date = (termina_en AT TIME ZONE 'UTC')::date),
    CONSTRAINT chk_reservas_coincide_fecha CHECK ((comienza_en AT TIME ZONE 'UTC')::date = fecha_reserva),
    CONSTRAINT chk_reservas_razon_cancelacion_obligatoria CHECK (
        (id_estado <> 3) OR (razon_cancelacion IS NOT NULL AND length(trim(razon_cancelacion)) > 0)
    )
);

-- Evita solapamientos solo para reservas activas (PENDIENTE=1, CONFIRMADA=2)
ALTER TABLE reservas
    ADD CONSTRAINT ex_reservas_sin_solapamiento_activas
    EXCLUDE USING gist (
        id_instalacion WITH =,
        tstzrange(comienza_en, termina_en, '[)') WITH &&
    )
    WHERE (id_estado IN (1, 2));

-- -----------------------------
-- 10) Catálogo de implementos
-- -----------------------------
CREATE TABLE IF NOT EXISTS elementos_equipo (
    id BIGSERIAL PRIMARY KEY,
    codigo VARCHAR(60) NOT NULL UNIQUE,
    id_deporte SMALLINT REFERENCES deportes(id) ON UPDATE RESTRICT ON DELETE SET NULL,
    nombre VARCHAR(120) NOT NULL,
    cantidad_total INTEGER NOT NULL,
    cantidad_disponible INTEGER NOT NULL,
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    actualizado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_elementos_equipo_cantidad_total CHECK (cantidad_total >= 0),
    CONSTRAINT chk_elementos_equipo_cantidad_disponible CHECK (cantidad_disponible >= 0 AND cantidad_disponible <= cantidad_total)
);

-- -----------------------------
-- 11) Solicitudes de implementos
-- -----------------------------
CREATE TABLE IF NOT EXISTS solicitudes_equipo (
    id BIGSERIAL PRIMARY KEY,
    id_reserva BIGINT NOT NULL REFERENCES reservas(id) ON UPDATE CASCADE ON DELETE CASCADE,
    id_elemento_equipo BIGINT NOT NULL REFERENCES elementos_equipo(id) ON UPDATE CASCADE ON DELETE RESTRICT,
    cantidad_solicitada INTEGER NOT NULL,
    cantidad_aprobada INTEGER,
    estado VARCHAR(30) NOT NULL DEFAULT 'PENDIENTE',
    notas VARCHAR(255),
    entregado_en TIMESTAMPTZ,
    devuelto_en TIMESTAMPTZ,
    creado_por BIGINT REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE SET NULL,
    actualizado_por BIGINT REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE SET NULL,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    actualizado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_solicitudes_equipo_cantidad_solicitada CHECK (cantidad_solicitada > 0),
    CONSTRAINT chk_solicitudes_equipo_cantidad_aprobada CHECK (cantidad_aprobada IS NULL OR cantidad_aprobada >= 0),
    CONSTRAINT chk_solicitudes_equipo_estado CHECK (estado IN ('PENDIENTE','APROBADA','RECHAZADA','ENTREGADA','DEVUELTA'))
);

-- -----------------------------
-- 12) Bloqueos de instalaciones
-- (Mantenimiento, eventos, etc.)
-- -----------------------------
CREATE TABLE IF NOT EXISTS bloqueos_instalaciones (
    id BIGSERIAL PRIMARY KEY,
    id_instalacion BIGINT NOT NULL REFERENCES instalaciones(id) ON UPDATE CASCADE ON DELETE CASCADE,
    razon VARCHAR(255) NOT NULL,
    inicia_en TIMESTAMPTZ NOT NULL,
    termina_en TIMESTAMPTZ NOT NULL,
    creado_por BIGINT REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE SET NULL,
    actualizado_por BIGINT REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE SET NULL,
    esta_activo BOOLEAN NOT NULL DEFAULT TRUE,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    actualizado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_bloqueos_instalaciones_orden_tiempo CHECK (inicia_en < termina_en)
);

-- -----------------------------
-- 13) Bitácora de auditoría
-- (Trazabilidad CU-20)
-- -----------------------------
CREATE TABLE IF NOT EXISTS registros_auditoria (
    id BIGSERIAL PRIMARY KEY,
    id_usuario_actor BIGINT REFERENCES usuarios(id) ON UPDATE CASCADE ON DELETE SET NULL, -- NULL = sistema
    accion VARCHAR(50) NOT NULL,       -- INSERT / UPDATE / DELETE / LOGIN / CANCEL
    nombre_entidad VARCHAR(60) NOT NULL,  -- tabla afectada
    id_entidad VARCHAR(60),             -- id lógico de fila
    motivo VARCHAR(255),
    direccion_ip INET,
    agente_usuario VARCHAR(300),
    valores_anteriores JSONB,
    valores_nuevos JSONB,
    creado_en TIMESTAMPTZ NOT NULL DEFAULT NOW(),
    CONSTRAINT chk_registros_auditoria_accion_permitida CHECK (accion IN ('INSERT','UPDATE','DELETE','LOGIN','CANCEL'))
);

COMMIT;
