@startuml UniDeportes_ER

!define ENTITY_COLOR #E8F0FE
!define CATALOG_COLOR #FEF7E0
!define TRANSACTION_COLOR #FCE8E6
!define AUDIT_COLOR #F3E8FD

skinparam linetype ortho
left to right direction

' =======================
' CATÁLOGOS
' =======================
package "Catálogos" {

entity roles <<catalog>> {
  id (PK)
  --
  codigo (UNIQUE)
  nombre
  esta_activo
}

entity deportes <<catalog>> {
  id (PK)
  --
  codigo (UNIQUE)
  nombre
  etiqueta_campo
  esta_activo
}

entity tipos_superficie <<catalog>> {
  id (PK)
  --
  codigo (UNIQUE)
  nombre
  esta_activo
}

entity escenarios <<catalog>> {
  id (PK)
  --
  codigo (UNIQUE)
  nombre
  id_tipo_superficie (FK)
  descripcion_ubicacion
  esta_activo
}

entity instalaciones <<catalog>> {
  id (PK)
  --
  id_escenario (FK)
  id_deporte (FK)
  codigo (UNIQUE)
  nombre
  capacidad
  esta_activo
}

entity franjas_horarias <<catalog>> {
  id (PK)
  --
  hora_inicio
  hora_fin
  orden_clasificacion (UNIQUE)
  esta_activo
}

entity estados_reserva <<catalog>> {
  id (PK)
  --
  codigo (UNIQUE)
  nombre
  es_final
  esta_activo
}

entity elementos_equipo <<catalog>> {
  id (PK)
  --
  codigo (UNIQUE)
  id_deporte (FK)
  nombre
  cantidad_total
  cantidad_disponible
  esta_activo
}

}

' =======================
' TRANSACCIONAL
' =======================
package "Transaccional" {

entity usuarios <<transaction>> {
  id (PK)
  --
  id_rol (FK)
  codigo_institucional (UNIQUE)
  nombre_usuario
  apellido_usuario
  correo_electronico (UNIQUE)
  hash_contrasena
  telefono
  esta_activo
  ultimo_login_en
  eliminado_en
}

entity reservas <<transaction>> {
  id (PK)
  --
  id_usuario (FK)
  id_instalacion (FK)
  id_estado (FK)
  fecha_reserva
  id_franja_inicio (FK)
  id_franja_fin (FK)
  comienza_en
  termina_en
  duracion_horas
  equipo_solicitado
  creado_por (FK)
  actualizado_por (FK)
}

entity solicitudes_equipo <<transaction>> {
  id (PK)
  --
  id_reserva (FK)
  id_elemento_equipo (FK)
  cantidad_solicitada
  cantidad_aprobada
  estado
  entregado_en
  devuelto_en
}

entity bloqueos_instalaciones <<transaction>> {
  id (PK)
  --
  id_instalacion (FK)
  razon
  inicia_en
  termina_en
  creado_por (FK)
  esta_activo
}

}

' =======================
' AUDITORÍA
' =======================
package "Auditoría" {

entity registros_auditoria <<audit>> {
  id (PK)
  --
  id_usuario_actor (FK)
  accion
  nombre_entidad
  id_entidad
  motivo
  direccion_ip
  agente_usuario
  valores_anteriores
  valores_nuevos
}

}

' =======================
' RELACIONES
' =======================

roles ||--o{ usuarios : asigna

usuarios ||--o{ reservas : hace
usuarios ||--o{ bloqueos_instalaciones : crea
usuarios ||--o{ registros_auditoria : realiza
usuarios ||--o{ solicitudes_equipo : solicita

deportes ||--o{ instalaciones : pertenecen
deportes ||--o{ elementos_equipo : equipan

tipos_superficie ||--o{ escenarios : clasifican
escenarios ||--o{ instalaciones : contienen

instalaciones ||--o{ reservas : reservadas
instalaciones ||--o{ bloqueos_instalaciones : bloqueadas

franjas_horarias ||--o{ reservas : inicio
franjas_horarias ||--o{ reservas : fin

estados_reserva ||--o{ reservas : estados

reservas ||--o{ solicitudes_equipo : solicitan
elementos_equipo ||--o{ solicitudes_equipo : equipo

@enduml